--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180405-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180405.csv.xz
+	execute: Periodic data update on 2018-04-05(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/f5b8bb8de8f8dc581f1811e26ac51bba8f2022c8
+
 # Release 20180329-01
 
 ### New seed data
