--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180409-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180409.csv.xz
+	execute: Periodic data update on 2018-04-09(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/88f038030570fe68075f5d9aeedab732e5e64b75
+
 # Release 20180405-01
 
 ### New seed data
