--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180416-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180416.csv.xz
+	execute: Periodic data update on 2018-04-16(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/6a480ec59238292328722af39ab596477eda7d4c
+
 # Release 20180409-01
 
 ### New seed data
