--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180419-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180419.csv.xz
+	execute: Periodic data update on 2018-04-19(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/50790cdc00ff28f51262ebd9cdf04bc2f2192130
+
 # Release 20180416-01
 
 ### New seed data
