--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180423-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180423.csv.xz
+	execute: Periodic data update on 2018-04-23(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7a95be39a456b315d746f5b8d1e547bd7e03e392
+
 # Release 20180419-01
 
 ### New seed data
