--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180503-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180503.csv.xz
+	execute: Periodic data update on 2018-05-03(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/3be648877768cfcea57d71a5bbaedae3dcd4b89d
+
 # Release 20180423-01
 
 ### New seed data
