--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180510-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180510.csv.xz
+	execute: Periodic data update on 2018-05-10(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/54057a881c110a78e404f0383effdeea4cc32204
+
 # Release 20180507-01
 
 ### New seed data
