--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180514-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180514.csv.xz
+	execute: Periodic data update on 2018-05-14(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/893c344982ece084e93ccd3341b5035a98ebd1a4
+
 # Release 20180510-01
 
 ### New seed data
