--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180524-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180524.csv.xz
+	execute: Periodic data update on 2018-05-24(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d5486434e90f132d4b06133a6aa9f0c2caec629f
+
 # Release 20180521-01
 
 ### New seed data
