--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180621-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180621.csv.xz
+	execute: Periodic data update on 2018-06-21(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a611afe90278ba923bc5fd8da37f67005f40364f
+
 # Release 20180618-01
 
 ### New seed data
