--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180628-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180628.csv.xz
+	execute: Periodic data update on 2018-06-28(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ac901853da018349157e926b94e3e0c8458fdd8a
+
 # Release 20180625-01
 
 ### New seed data
