--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180705-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180705.csv.xz
+	execute: Periodic data update on 2018-07-05(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4da5e3f29ec8fc300a27dd3c487305b6477c8931
+
 # Release 20180628-01
 
 ### New seed data
