--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180709-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180709.csv.xz
+	execute: Periodic data update on 2018-07-09(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/87a610b73447d9658180d510eda96bbf7d99ecc2
+
 # Release 20180705-01
 
 ### New seed data
