--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180712-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180712.csv.xz
+	execute: Periodic data update on 2018-07-12(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a65bbdbbaefb7262e1281d6b9c1e4ab2931c404b
+
 # Release 20180709-01
 
 ### New seed data
