--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180719-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180719.csv.xz
+	execute: Periodic data update on 2018-07-19(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e761549099e4900c3a7ac27176a7e7e21195f6ae
+
 # Release 20180712-01
 
 ### New seed data
