--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180723-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180723.csv.xz
+	execute: Periodic data update on 2018-07-23(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7cbed8c0981418fb802a348dcfdedfcf6febaaa5
+
 # Release 20180719-01
 
 ### New seed data
