--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180726-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180726.csv.xz
+	execute: Periodic data update on 2018-07-26(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/16202862cf7ed641902f70f4b15a7056a246115f
+
 # Release 20180723-01
 
 ### New seed data
