--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+# Release 20180813-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180813.csv.xz
+	execute: Periodic data update on 2018-08-13(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/986ee315811ff4bb31b84ee7376a794af2184154
+
+# Release 20180809-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180809.csv.xz
+	execute: Periodic data update on 2018-08-09(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c4a11bf856a6611fb661f74e692137381198d1fd
+
 # Release 20180806-01
 
 ### New seed data
