--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180820-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180820.csv.xz
+	execute: Periodic data update on 2018-08-20(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/bad7883d92c7ab22a059ec8afe862eefce78c81d
+
 # Release 20180813-01
 
 ### New seed data
