--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180823-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180823.csv.xz
+	execute: Periodic data update on 2018-08-23(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/47b8d17fab875a539a1afd8d89f8f47612ae5647
+
 # Release 20180820-01
 
 ### New seed data
