--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180831-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180831.csv.xz
+	execute: Periodic data update on 2018-08-31(Fri)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ab4815fb1d60aa7b0457fc2b2fa6da70e4fbf79f
+
 # Release 20180823-01
 
 ### New seed data
