--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180906-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180906.csv.xz
+	execute: Periodic data update on 2018-09-06(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/575cdff4d131c142abdb9c21e7d339060d1cfabd
+
 # Release 20180831-01
 
 ### New seed data
