--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180917-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180917.csv.xz
+	execute: Periodic data update on 2018-09-17(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/85e8af38f53a4599d53454bbd85383704b2c33bb
+
 # Release 20180913-01
 
 ### New seed data
