--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180920-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180920.csv.xz
+	execute: Periodic data update on 2018-09-20(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d1ddd07d5e87abfd9aa267263491662778e855e0
+
 # Release 20180917-01
 
 ### New seed data
