--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180927-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180927.csv.xz
+	execute: Periodic data update on 2018-09-27(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/1d9c6c47666522f8c4a4af858677e64bdb78f932
+
 # Release 20180920-01
 
 ### New seed data
