--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20181015-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20181015.csv.xz
+	execute: Periodic data update on 2018-10-15(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/f197a735ba6414cceeb7cc4de483943c4eb29a97
+
 # Release 20181011-01
 
 ### New seed data
