--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20181022-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20181022.csv.xz
+	execute: Periodic data update on 2018-10-22(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/3bfedbf79fe84ad30abb87c9f7aeb305a07e9579
+
 # Release 20181018-01
 
 ### New seed data
