--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20181112-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20181112.csv.xz
+	execute: Periodic data update on 2018-11-12(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/fca86667642f9b53cafff2de9616e680655d9bbb
+
 # Release 20181108-01
 
 ### New seed data
