--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20181227-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20181227.csv.xz
+	execute: Periodic data update on 2018-12-27(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/52b86463ba77640c36ce99c4f1ec70dd4543d4c5
+
 # Release 20181224-01
 
 ### New seed data
