--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190114-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190114.csv.xz
+	execute: Periodic data update on 2019-01-14(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/0cdfa387e0b282b66fc59165ed05b6fcc9575233
+
 # Release 20181227-01
 
 ### New seed data
