--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190117-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190117.csv.xz
+	execute: Periodic data update on 2019-01-17(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/8054f5f75d0c8c7925e8729759f7294eab0852cb
+
 # Release 20190114-01
 
 ### New seed data
