--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190121-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190121.csv.xz
+	execute: Periodic data update on 2019-01-21(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d79b2cc819a55ebe7c0c6731899f039aac12fc44
+
 # Release 20190117-01
 
 ### New seed data
