--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190128-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190128.csv.xz
+	execute: Periodic data update on 2019-01-28(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/53df2e71ef9f508147f90af255d2391c0e78b928
+
 # Release 20190124-01
 
 ### New seed data
