--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190131-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190131.csv.xz
+	execute: Periodic data update on 2019-01-31(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/fd5fb3501f3ea01d3ae09d732ea929d95fc61849
+
 # Release 20190128-01
 
 ### New seed data
