--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190204-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190204.csv.xz
+	execute: Periodic data update on 2019-02-04(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a2f353a158393dae4a1359de339502ac57e85eef
+
 # Release 20190131-01
 
 ### New seed data
