--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190211-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190211.csv.xz
+	execute: Periodic data update on 2019-02-11(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c2e9891eec0a513ed9a91019e99930ef27103eb2
+
 # Release 20190204-01
 
 ### New seed data
