--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190214-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190214.csv.xz
+	execute: Periodic data update on 2019-02-14(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a6f6b7df7597dae84f702e7f014aad069778361f
+
 # Release 20190211-01
 
 ### New seed data
