--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190218-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190218.csv.xz
+	execute: Periodic data update on 2019-02-18(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7c3499531e048b0c6693914e5a7f41fab0748dca
+
 # Release 20190214-01
 
 ### New seed data
