--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190221-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190221.csv.xz
+	execute: Periodic data update on 2019-02-21(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/fe0e3fd39ea347cad2ee9a8b70da09936314d2c7
+
 # Release 20190218-01
 
 ### New seed data
