--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+# Release 20190228-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190228.csv.xz
+	execute: Periodic data update on 2019-02-28(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/02c1c56ad3b2810393a898b67a9abd06906a3fb5
+
+# Release 20190225-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190225.csv.xz
+	execute: Periodic data update on 2019-02-25(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/5defb931bf806cd4011505d9c787b90281517b12
+
 # Release 20190221-01
 
 ### New seed data
