--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+# Release 20190321-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190321.csv.xz
+	execute: Periodic data update on 2019-03-21(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/1435892c35c193664ed8706ad8bb0bd8e03050b2
+
+# Release 20190307-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190307.csv.xz
+	execute: Periodic data update on 2019-03-07(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d67c7000f5489dad6863507842686df32b075c69
+
 # Release 20190228-01
 
 ### New seed data
