--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190401-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190401.csv.xz
+	execute: Periodic data update on 2019-04-01(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/71c8dae0629bbdc12b354b65f2ad500c9593e826
+
 # Release 20190325-01
 
 ### New seed data
