--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190404-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190404.csv.xz
+	execute: Periodic data update on 2019-04-04(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/04bd21b4f683018e17ecf01dacd7dcee62df3d64
+
 # Release 20190401-01
 
 ### New seed data
