--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190411-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190411.csv.xz
+	execute: Periodic data update on 2019-04-11(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/f52c85d566684a0cf3e3d106ac454e3951224f7f
+
 # Release 20190408-01
 
 ### New seed data
