--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190415-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190415.csv.xz
+	execute: Periodic data update on 2019-04-15(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/9190f828ac792d0e63d1f92660853521573f8ade
+
 # Release 20190411-01
 
 ### New seed data
