--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190418-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190418.csv.xz
+	execute: Periodic data update on 2019-04-18(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/db190f138c8b163e311f818d4898bb01498cd742
+
 # Release 20190415-01
 
 ### New seed data
