--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190422-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190422.csv.xz
+	execute: Periodic data update on 2019-04-22(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/52a68eef4bb2dff3c361857974fd0e201cbd709a
+
 # Release 20190418-01
 
 ### New seed data
