--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190425-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190425.csv.xz
+	execute: Periodic data update on 2019-04-25(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/dc458e74587301df39ee7d85a238e785428f37f4
+
 # Release 20190422-01
 
 ### New seed data
