--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190506-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190506.csv.xz
+	execute: Periodic data update on 2019-05-06(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7794c53bc0b827aca44833a2b44b3ad1531418e7
+
 # Release 20190502-01
 
 ### New seed data
