--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190610-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190610.csv.xz
+	execute: Periodic data update on 2019-06-10(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/57dd7ccf60e534e033f7784185c15e0be4f689af
+
 # Release 20190527-01
 
 ### New seed data
