--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190613-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190613.csv.xz
+	execute: Periodic data update on 2019-06-13(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ec44e880b0fdc751a74e287fca90910bac7c0de5
+
 # Release 20190610-01
 
 ### New seed data
