--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190617-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190617.csv.xz
+	execute: Periodic data update on 2019-06-17(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e6bca97afcc0b183ee5ddd13c97a5f1d5f69bc1f
+
 # Release 20190613-01
 
 ### New seed data
