--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190624-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190624.csv.xz
+	execute: Periodic data update on 2019-06-24(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/fc975ea6a33414040a7f9f79da9ad18865b22686
+
 # Release 20190620-01
 
 ### New seed data
