--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190701-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190701.csv.xz
+	execute: Periodic data update on 2019-07-01(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7ab1c71b144c37bf1f57a10c1c464c517cce01e5
+
 # Release 20190624-01
 
 ### New seed data
