--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190722-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190722.csv.xz
+	execute: Periodic data update on 2019-07-22(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/664f65a4cb716fe3739c6daeca62cd7467ea8e0a
+
 # Release 20190701-01
 
 ### New seed data
