--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190806-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190806.csv.xz
+	execute: Periodic data update on 2019-08-06(Tue)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/0a97aaa37f4c53ebb14f8b32b6b3293f5c73617c
+
 # Release 20190722-01
 
 ### New seed data
