--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190812-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190812.csv.xz
+	execute: Periodic data update on 2019-08-12(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4ccb2cadeba718a88cdb1c95712b805273a92372
+
 # Release 20190808-01
 
 ### New seed data
