--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190815-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190815.csv.xz
+	execute: Periodic data update on 2019-08-15(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/2ec6cb1aa79c763836442347eefcc69800636e9e
+
 # Release 20190812-01
 
 ### New seed data
