--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190819-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190819.csv.xz
+	execute: Periodic data update on 2019-08-19(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a3dad5b110fd39e0520cecefd394659a2a54005f
+
 # Release 20190815-01
 
 ### New seed data
