--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190826-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190826.csv.xz
+	execute: Periodic data update on 2019-08-26(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/3cd0539199f417d978c022f3172fdc02b451cbc3
+
 # Release 20190819-01
 
 ### New seed data
