--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190829-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190829.csv.xz
+	execute: Periodic data update on 2019-08-29(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/1c9afcdbfe7a27261a754f2ecad74f674f815f9e
+
 # Release 20190826-01
 
 ### New seed data
