--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+# Release 20190902-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190902.csv.xz
+	execute: Periodic data update on 2019-09-02(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a3adcb87c75f1df922c5d964c492ebcdfd4fa761
+
+	Today is @overlast's birthda.
+	Thank you for your supporting !!
+	https://www.amazon.co.jp/hz/wishlist/ls/215KD7HCB406E
+
 # Release 20190829-01
 
 ### New seed data
