--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190905-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190905.csv.xz
+	execute: Periodic data update on 2019-09-05(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/525fc504f4900703bdcfbd269d4c63d878d20f89
+
 # Release 20190902-01
 
 ### New seed data
