--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190911-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190911.csv.xz
+	execute: Nonperiodic data update on 2019-09-11(Wed)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/58e94fcb11e0055031e7f3c0d6d74adf179b3988
+
 # Release 20190905-01
 
 ### New seed data
