--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190926-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190926.csv.xz
+	execute: Nonperiodic data update on 2019-09-26(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/2c5b8bcdc7619a31d042388647bec13cb8d4782a
+
 # Release 20190923-01
 
 ### New seed data
