--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20190930-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20190930.csv.xz
+	execute: Nonperiodic data update on 2019-09-30(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/71301314ac9e194cbce747a7f08e5f5b91e2e9c3
+
 # Release 20190926-01
 
 ### New seed data
