--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20191107-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20191107.csv.xz
+	execute: Nonperiodic data update on 2019-11-07(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/302fbe853a105dbe66508987baf77be697e4182e
+
 # Release 20191031-01
 
 ### New seed data
