--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20191128-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20191128.csv.xz
+	execute: Nonperiodic data update on 2019-11-28(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c7f7b893eb44a469a060dabf142dad56b5ca3a8c
+
 # Release 20191125-01
 
 ### New seed data
