--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20191202-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20191202.csv.xz
+	execute: Nonperiodic data update on 2019-12-02(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/b698ef4e7e0c68c93faae9b7b7071fb5afedba6d
+
 # Release 20191128-01
 
 ### New seed data
