--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20191205-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20191205.csv.xz
+	execute: Nonperiodic data update on 2019-12-05(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/46af1cda9ad5f4acde262aa8338cb13f3933fbcc
+
 # Release 20191202-01
 
 ### New seed data
