--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20191212-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20191212.csv.xz
+	execute: Nonperiodic data update on 2019-12-12(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d9d3ed4184785e5e415be06cf186a4ed46943bc7
+
 # Release 20191205-01
 
 ### New seed data
