--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20191226-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20191226.csv.xz
+	execute: Nonperiodic data update on 2019-12-26(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/22abd6776df750562e70869300e4a4797d93e9ef
+
 # Release 20191212-01
 
 ### New seed data
