--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20191230-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20191230.csv.xz
+	execute: Nonperiodic data update on 2019-12-30(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/246e26394ec88ae83a6315fb6aedd383e7c72f99
+
 # Release 20191226-01
 
 ### New seed data
