--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20200120-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20200120.csv.xz
+	execute: Nonperiodic data update on 2020-01-20(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/f26657ebae1f12e1b6cb1856d8b5c369f5449607
+
 # Release 20200109-01
 
 ### New seed data
