--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20200430-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20200430.csv.xz
+	execute: Nonperiodic data update on 2020-04-30(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/cba1c356dde2244f57ade75baf8d139994206bf3
+
 # Release 20200315-01
 
 ### New seed data
