--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20200521-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20200521.csv.xz
+	execute: Nonperiodic data update on 2020-05-21(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a810e8c293989c1d5b7b81c09a35c035accf0fdf
+
 # Release 20200514-01
 
 ### New seed data
