--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+# Release 20200813-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20200813.csv.xz
+	execute: Nonperiodic data update on 2020-08-13(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/3d2db504483e70c01453af946f1b894ba109cc60
+
+# Release 20200709-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20200709.csv.xz
+	execute: Nonperiodic data update on 2020-07-09(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e15724703b5318b75bc8e82804a1c76d403e77e8
+
 # Release 20200521-01
 
 ### New seed data
